--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE>
 <html>
   <head><meta name="propeller" content="62a1d339277975227c5c183cae5f9031">
+    <meta name="propeller" content="62a1d339277975227c5c183cae5f9031">
     </head>
 <body>
 <h1>new site</h1>
+  <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
 </body>
 </html>
