--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="propeller" content="62a1d339277975227c5c183cae5f9031">
     </head>
 <body>
-<h1>new site</h1>
+  <a href="http://bodelen.com/afu.php?zoneid=2243950"><h1>new site</h1></a>
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
 </body>
 </html>
