--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <a href="http://bodelen.com/afu.php?zoneid=2243950"><h1>new site</h1></a>
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
-  https://jaunithuw.com/?h=ee99f16d30e62586206d1d676b06176ba487722d
+  <iframe href="https://jaunithuw.com/?h=ee99f16d30e62586206d1d676b06176ba487722d"></iframe>
 </body>
 </html>
