--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     
     </head>
 <body>
-  <a href="http://bodelen.com/afu.php?zoneid=2243950"><h1>new site</h1></a>
+  <h1>Best website for online earning <h1
+  <img src="https://imgur.com/a/Sym2JUV"  style="width:48px;height:48px;"> 
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
   <a href="https://jaunithuw.com/?h=ee99f16d30e62586206d1d676b06176ba487722d">click here</a>
