--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <img src="https://imgur.com/a/Sym2JUV"  style="width:48px;height:48px;"> 
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
-  <a href="https://jaunithuw.com/?h=ee99f16d30e62586206d1d676b06176ba487722d">click here</a>
+<button onclick=" http://bodelen.com/afu.php?zoneid=2250069">enter the site</button>
 </body>
 </html>
