--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html>
   <head><meta name="propeller" content="62a1d339277975227c5c183cae5f9031">
     <meta name="propeller" content="62a1d339277975227c5c183cae5f9031">
+    <style>
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 28px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button2 {background-color: #008CBA;} /* Blue */
+.button3 {background-color: #f44336;} /* Red */ 
+.button4 {background-color: #e7e7e7; color: black;} /* Gray */ 
+.button5 {background-color: #555555;} /* Black */
+</style>
     
     </head>
 <body>
@@ -9,6 +28,13 @@
   <img src="https://imgur.com/a/Sym2JUV"  style="width:48px;height:48px;"> 
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
-<button onclick=" http://bodelen.com/afu.php?zoneid=2250069">enter the site</button>
+
+
+<a href="http://bodelen.com/afu.php?zoneid=2250069"><button class="button">Website for affiliate marketing</button></a>
+<a hef="http://bodelen.com/afu.php?zoneid=2250096"><button class="button button2">website for video marketing</button></a>
+<a href="http://bodelen.com/afu.php?zoneid=2250100"><button class="button button3">website for content marketing</button></a>
+<a href="http://bodelen.com/afu.php?zoneid=2250100"><button class="button button4">website for cpm</button></a>
+
+
 </body>
 </html>
