--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     
     </head>
 <body>
-  <h1>Best website for online earning <h1
-  <img src="https://imgur.com/a/Sym2JUV"  style="width:48px;height:48px;"> 
+  <h1>Best website for online earning <h1>
+    <blockquote class="imgur-embed-pub" lang="en" data-id="a/Sym2JUV"><a href="//imgur.com/Sym2JUV"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+   
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
 
