--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
 <body>
   <h1>Best website for online earning <h1>
-    <blockquote class="imgur-embed-pub" lang="en" data-id="a/Sym2JUV"><a href="//imgur.com/Sym2JUV"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
    
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
   <script async="async" data-cfasync="false" src="//tharbadir.com/2?z=2243932"></script>
@@ -34,7 +34,7 @@
 <a href="http://bodelen.com/afu.php?zoneid=2250069"><button class="button">Website for affiliate marketing</button></a>
 <a hef="http://bodelen.com/afu.php?zoneid=2250096"><button class="button button2">website for video marketing</button></a>
 <a href="http://bodelen.com/afu.php?zoneid=2250100"><button class="button button3">website for content marketing</button></a>
-<a href="http://bodelen.com/afu.php?zoneid=2250100"><button class="button button4">website for cpm</button></a>
+<a href="http://bodelen.com/afu.php?zoneid=2250100"><button class="button button5">website for cpm</button></a>
 
 
 </body>
