--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
 .button3 {background-color: #f44336;} /* Red */ 
 .button4 {background-color: #e7e7e7; color: black;} /* Gray */ 
 .button5 {background-color: #555555;} /* Black */
+   body {
+     text-align: justify;
+      text-align: center;
+  color: blue;
+}
+
+h1 {
+  font-size: 2.5em;
+  text-align: justify;
+   text-align: center;
+  color: green;
+}   
 </style>
     
     </head>
