--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
       text-align: center;
   color: blue;
 }
+     body {
+  background-color: light green
+} 
 
 h1 {
   font-size: 2.5em;
   text-align: justify;
    text-align: center;
-  color: green;
+  color: red;
 }   
 </style>
     
