--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
    body {
      text-align: justify;
       text-align: center;
-  color: blue;
+ background-color:hsla(9, 100%, 64%, 0.5);
 }
      body {
-  background-color: light green
+  
 } 
 
 h1 {
