--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ h1 {
 
 
 <a href="http://bodelen.com/afu.php?zoneid=2250069"><button class="button">Website for affiliate marketing</button></a>
-<http://bodelen.com/afu.php?zoneid=2250145"><button class="button ">website for video marketing</button></a>
+<a href="http://bodelen.com/afu.php?zoneid=2250145"><button class="button button2 ">website for video marketing</button></a>
 <a href="http://bodelen.com/afu.php?zoneid=2250100"><button class="button button3">website for content marketing</button></a>
 <a href="http://bodelen.com/afu.php?zoneid=2250100"><button class="button button5">website for cpm</button></a>
 
