--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@ h1 {
     
     </head>
 <body>
+  <script type="text/javascript">
+  ( function() {
+    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+    var unit = {"calltype":"async[2]","publisher":"dalia24","width":728,"height":90,"sid":"Chitika Default"};
+    var placement_id = window.CHITIKA.units.length;
+    window.CHITIKA.units.push(unit);
+    document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+}());
+</script>
+<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
   <h1>Best website for online earning <h1>
     <script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
    
@@ -50,6 +60,16 @@ h1 {
 <a href="http://bodelen.com/afu.php?zoneid=2250145"><button class="button button2 ">website for video marketing</button></a>
 <a href="http://bodelen.com/afu.php?zoneid=2250100"><button class="button button3">website for content marketing</button></a>
 <a href="http://bodelen.com/afu.php?zoneid=2250100"><button class="button button5">website for cpm</button></a>
+    <script type="text/javascript">
+  ( function() {
+    if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
+    var unit = {"calltype":"async[2]","publisher":"dalia24","width":300,"height":600,"sid":"Chitika Default"};
+    var placement_id = window.CHITIKA.units.length;
+    window.CHITIKA.units.push(unit);
+    document.write('<div id="chitikaAdBlock-' + placement_id + '"></div>');
+}());
+</script>
+<script type="text/javascript" src="//cdn.chitika.net/getads.js" async></script>
 
 
 </body>
