--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ h1 {
     
     </head>
 <body>
+  <script type="text/javascript" src="//bodelen.com/apu.php?zoneid=2250175"></script>
   <script type="text/javascript">
   ( function() {
     if (window.CHITIKA === undefined) { window.CHITIKA = { 'units' : [] }; };
